clusters/dev/nginx/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: nginx
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`nginx.localhost`)
      services:
        - name: nginx
          port: 80
